--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
 <!-- ABOUT -->
 <section class="about" id="about">
   <div class="about-img-wrap">
-    <img src="laura_photo.png" alt="Dr. Laura L. Walsh" style="width:100%;aspect-ratio:4/5;object-fit:cover;object-position:center top;border-radius:2px;">
+    <img src="laura_photo2.png" alt="Dr. Laura L. Walsh" style="width:100%;aspect-ratio:4/5;object-fit:cover;object-position:center top;border-radius:2px;">
     <div class="about-badge">
       <strong>20+</strong>
       <span>Years of Experience</span>
