--- a/index.html
+++ b/index.html
@@ -821,8 +821,8 @@
       <span class="pill">Adult Psychotherapy</span>
     </div>
     <div class="hero-btns">
-      <a href="#forensic" class="btn-primary">For Attorneys &amp; Organizations</a>
-      <a href="#therapy" class="btn-outline">For Individuals</a>
+      <a href="forensic.html" class="btn-primary">For Attorneys &amp; Organizations</a>
+      <a href="therapy.html" class="btn-outline">For Individuals</a>
     </div>
   </div>
   <div class="hero-right">
