--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
         <span>Safety Protocols</span>
         <span>Model Evaluation</span>
       </div>
-      <span class="service-link" style="margin-top:auto;">For Organizations →</span>
+      <span class="service-link" style="margin-top:auto;"><a href="ai.html" style="color:var(--terra);text-decoration:none;">For Organizations →</a></span>
     </a>
 
   </div>
