--- a/therapy.html
+++ b/therapy.html
@@ -145,7 +145,7 @@
     <li><a href="ai.html">AI Consulting</a></li>
     <li><a href="therapy.html" class="active">Therapy</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="index.html#contact" class="nav-cta">Contact</a></li>
+    <li><a href="contact.html" class="nav-cta">Contact</a></li>
   </ul>
 </nav>
 
@@ -335,4 +335,11 @@
     <li><a href="forensic.html">Forensic</a></li>
     <li><a href="ai.html">AI Consulting</a></li>
     <li><a href="therapy.html">Therapy</a></li>
-    
+        <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+  <p class="footer-copy">© 2025 Dr. Laura L. Walsh · Walsh Psychology · Trinidad, CO</p>
+</footer>
+
+</body>
+</html>
