--- a/forensic.html
+++ b/forensic.html
@@ -196,7 +196,7 @@
     <li><a href="ai.html">AI Consulting</a></li>
     <li><a href="therapy.html">Therapy</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="index.html#contact" class="nav-cta">Contact</a></li>
+    <li><a href="contact.html" class="nav-cta">Contact</a></li>
   </ul>
 </nav>
 
@@ -428,7 +428,7 @@
     </div>
     <div class="contact-detail">
       <div class="contact-detail-label">Phone</div>
-      <div class="contact-detail-val">773-474-0025</div>
+      <div class="contact-detail-val">720-515-5681</div>
     </div>
     <div class="contact-detail">
       <div class="contact-detail-label">Location</div>
@@ -454,7 +454,7 @@
     <li><a href="ai.html">AI Consulting</a></li>
     <li><a href="therapy.html">Therapy</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="index.html#contact">Contact</a></li>
+    <li><a href="contact.html">Contact</a></li>
   </ul>
   <p class="footer-copy">© 2025 Dr. Laura L. Walsh · Walsh Psychology · Trinidad, CO</p>
 </footer>
