--- a/about.html
+++ b/about.html
@@ -289,7 +289,7 @@
       <div class="speaking-cta">
         <h3>Interested in a speaking engagement or media inquiry?</h3>
         <p>Dr. Walsh is available for conferences, professional trainings, podcast appearances, and media commentary. Reach out to discuss availability and topics.</p>
-        <a href="/cdn-cgi/l/email-protection#442036282531362528332528372c042329252d286a272b297b3731262e21273079173421252f2d2a236176746176026176740921202d256176740d2a35312d363d" class="btn-terra">Get in Touch</a>
+        <a href="mailto:laura@walshpsych.net?subject=Speaking%20%2F%20Media%20Inquiry" class="btn-terra">Get in Touch</a>
       </div>
     </div>
   </section>
