--- a/ai.html
+++ b/ai.html
@@ -315,7 +315,7 @@
   <div class="closing-inner">
     <h2>AI systems don't fail because<br><em>they lack information.</em></h2>
     <p>They fail because they misread what matters. If your system is interacting with real people in high-stakes moments, this is worth getting right. Let's talk about where your blind spots might be.</p>
-    <a href="mailto:drlauralwalsh@gmail.com?subject=AI%20Risk%20Consulting%20Inquiry" class="btn-terra">Request a Consult</a>
+    <a href="mailto:laura@walshpsych.net?subject=AI%20Risk%20Consulting%20Inquiry" class="btn-terra">Request a Consult</a>
   </div>
 </section>
 
@@ -332,8 +332,4 @@
     <li><a href="about.html">About</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <p class="footer-copy">© 2025 Dr. Laura L. Walsh · Walsh Psychology · Trinidad, CO</p>
-</footer>
-
-</body>
-</html>
+  <p class="footer-copy">© 2025
