--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
       <div class="contact-details">
         <div>
           <div class="contact-item-label">Email</div>
-          <div class="contact-item-value"><a href="/cdn-cgi/l/email-protection#3c584e505d494e5d504b5d504f547c5b515d5550125f5351"><span class="__cf_email__" data-cfemail="8eeafce2effbfcefe2f9efe2fde6cee9e3efe7e2a0ede1e3">[email&#160;protected]</span></a></div>
+          <div class="contact-item-value"><a href="mailto:laura@walshpsych.net">laura@walshpsych.net</a></div>
         </div>
         <div>
           <div class="contact-item-label">Phone</div>
@@ -147,14 +147,14 @@
       <div class="path-label">Forensic &amp; AI Consulting</div>
       <h2>Attorney &amp; Organizational Inquiries</h2>
       <p>Expert witness, consultation, and AI risk services. Please include a brief description of your matter and timeline.</p>
-      <a href="/cdn-cgi/l/email-protection#80e4f2ece1f5f2e1ecf7e1ecf3e8c0e7ede1e9ecaee3efedbff3f5e2eae5e3f4bdc6eff2e5eef3e9e3a5b2b0a5b2c6a5b2b0c1c9a5b2b0c3efeef3f5ecf4e9eee7a5b2b0c9eef1f5e9f2f9" class="btn-terra">Email Dr. Walsh →</a>
+      <a href="mailto:laura@walshpsych.net?subject=Forensic%20%2F%20AI%20Consulting%20Inquiry" class="btn-terra">Email Dr. Walsh →</a>
     </div>
 
     <div class="path">
       <div class="path-label">Writing, Speaking &amp; Media</div>
       <h2>Engagements &amp; Press</h2>
       <p>Speaking, writing, podcasts, and media commentary. Always interested in thoughtful conversations at the edges of the discipline.</p>
-      <a href="/cdn-cgi/l/email-protection#d4b0a6b8b5a1a6b5b8a3b5b8a7bc94b3b9b5bdb8fab7bbb9eba7a1b6beb1b7a0e987a4b1b5bfbdbab3f1e6e4f1e692f1e6e499b1b0bdb5f1e6e49dbaa5a1bda6ad" class="btn-terra">Send a Message →</a>
+      <a href="mailto:laura@walshpsych.net?subject=Speaking%20%2F%20Media%20Inquiry" class="btn-terra">Send a Message →</a>
     </div>
 
   </div>
