--- a/forensic.html
+++ b/forensic.html
@@ -424,7 +424,7 @@
   <div class="contact-details">
     <div class="contact-detail">
       <div class="contact-detail-label">Email</div>
-      <div class="contact-detail-val"><a href="mailto:drlauralwalsh@gmail.com">drlauralwalsh@gmail.com</a></div>
+      <div class="contact-detail-val"><a href="mailto:laura@walshpsych.net">laura@walshpsych.net</a></div>
     </div>
     <div class="contact-detail">
       <div class="contact-detail-label">Phone</div>
@@ -439,7 +439,7 @@
       <div class="contact-detail-val">Available upon request</div>
     </div>
   </div>
-  <a href="mailto:drlauralwalsh@gmail.com?subject=Case%20inquiry%20for%20Dr.%20Walsh" class="btn-white">Email Dr. Walsh</a>
+  <a href="mailto:laura@walshpsych.net?subject=Forensic%20Inquiry" class="btn-white">Email Dr. Walsh</a>
   <a href="https://drlauralwalsh.com/s/Dr-Laura-L-Walsh-CV-Rev-02-26.pdf" download class="btn-outline-white">Download CV</a>
 </section>
 
@@ -452,12 +452,4 @@
   <ul class="footer-nav">
     <li><a href="forensic.html">Forensic</a></li>
     <li><a href="ai.html">AI Consulting</a></li>
-    <li><a href="therapy.html">Therapy</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-  <p class="footer-copy">© 2025 Dr. Laura L. Walsh · Walsh Psychology · Trinidad, CO</p>
-</footer>
-
-</body>
-</html>
+    <li><a href="therapy.html">Ther
