--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
     <div class="contact-info">
       <div class="contact-item">
         <span class="contact-item-label">Email</span>
-        <span><a href="mailto:drlauralwalsh@gmail.com" style="color:var(--terra);text-decoration:none;">drlauralwalsh@gmail.com</a></span>
+        <span><a href="mailto:laura@walshpsych.net" style="color:var(--terra);text-decoration:none;">laura@walshpsych.net</a></span>
       </div>
       <div class="contact-item">
         <span class="contact-item-label">Phone</span>
@@ -977,14 +977,14 @@
       <div style="font-size:0.65rem;font-weight:500;letter-spacing:0.18em;text-transform:uppercase;color:var(--terra);margin-bottom:0.5rem;">Forensic &amp; AI Consulting</div>
       <h3 style="font-family:var(--serif);font-size:1.4rem;font-weight:300;color:var(--slate);margin-bottom:0.5rem;">Attorney &amp; Organizational Inquiries</h3>
       <p style="font-size:0.88rem;line-height:1.75;color:#667788;margin-bottom:1rem;">Expert witness, consultation, and AI risk services. Please include a brief description of your matter and timeline.</p>
-      <a href="mailto:drlauralwalsh@gmail.com?subject=Forensic%20%2F%20AI%20Consulting%20Inquiry" class="btn-primary" style="font-size:0.75rem;padding:0.75rem 1.8rem;">Email Dr. Walsh →</a>
+      <a href="mailto:laura@walshpsych.net?subject=Forensic%20%2F%20AI%20Consulting%20Inquiry" class="btn-primary" style="font-size:0.75rem;padding:0.75rem 1.8rem;">Email Dr. Walsh →</a>
     </div>
 
     <div style="padding:2.5rem 0;">
       <div style="font-size:0.65rem;font-weight:500;letter-spacing:0.18em;text-transform:uppercase;color:var(--terra);margin-bottom:0.5rem;">Writing, Speaking &amp; Media</div>
       <h3 style="font-family:var(--serif);font-size:1.4rem;font-weight:300;color:var(--slate);margin-bottom:0.5rem;">Engagements &amp; Press</h3>
       <p style="font-size:0.88rem;line-height:1.75;color:#667788;margin-bottom:1rem;">Speaking, writing, podcasts, and media commentary on psychology, forensic topics, and AI risk.</p>
-      <a href="mailto:drlauralwalsh@gmail.com?subject=Speaking%20%2F%20Media%20Inquiry" class="btn-primary" style="font-size:0.75rem;padding:0.75rem 1.8rem;">Send a Message →</a>
+      <a href="mailto:laura@walshpsych.net?subject=Speaking%20%2F%20Media%20Inquiry" class="btn-primary" style="font-size:0.75rem;padding:0.75rem 1.8rem;">Send a Message →</a>
     </div>
 
   </div>
