--- a/therapy.html
+++ b/therapy.html
@@ -35,7 +35,7 @@
   .nav-cta:hover { background: var(--terra); color: var(--white) !important; }
 
   /* ─── PAGE HERO ───────────────────────────────────── */
-  .page-hero { min-height: 55vh; background: #1b2d4a; display: grid; grid-template-columns: 1.1fr 0.9fr; align-items: end; position: relative; overflow: hidden; padding-top: 8rem; }
+  .page-hero { min-height: 55vh; background: #1b2d4a; display: grid; grid-template-columns: 1.1fr 0.9fr; align-items: end; position: relative; overflow: hidden; padding-top: 12rem; }
   .topo-bg { position: absolute; inset: 0; pointer-events: none; opacity: 0.06; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='800' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23ffffff' stroke-width='1.2'%3E%3Cellipse cx='420' cy='320' rx='80' ry='65'/%3E%3Cellipse cx='420' cy='320' rx='130' ry='108'/%3E%3Cellipse cx='420' cy='320' rx='180' ry='155'/%3E%3Cellipse cx='420' cy='320' rx='235' ry='205'/%3E%3Cellipse cx='420' cy='320' rx='295' ry='258'/%3E%3Cellipse cx='420' cy='320' rx='360' ry='315'/%3E%3C/g%3E%3C/svg%3E"); background-size: cover; }
   .page-hero::before { content: ''; position: absolute; inset: 0; background: radial-gradient(ellipse 60% 80% at 30% 60%, rgba(184,92,56,0.10) 0%, transparent 65%); }
   .hero-text { padding: 0 4rem 5rem; position: relative; z-index: 1; }
@@ -158,7 +158,7 @@
     <p class="page-subtitle">Practical, active, and authentic — helping adults build genuine insight and become the changemakers in their own lives.</p>
   </div>
   <div class="hero-photo">
-    <img src="laura_photo.png" alt="Dr. Laura L. Walsh">
+    <img src="laura_photo2.png" alt="Dr. Laura L. Walsh">
   </div>
 </section>
 
@@ -317,10 +317,10 @@
   </div>
   <div class="cta-right">
     <div class="contact-detail-label">Email</div>
-    <div class="contact-detail-val"><a href="/cdn-cgi/l/email-protection#cfabbda3aebabdaea3b8aea3bca78fa8a2aea6a3e1aca0a2"><span class="__cf_email__" data-cfemail="b4d0c6d8d5c1c6d5d8c3d5d8c7dcf4d3d9d5ddd89ad7dbd9">[email&#160;protected]</span></a></div>
+    <div class="contact-detail-val"><a href="mailto:laura@walshpsych.net" style="color:var(--terra);text-decoration:none;">laura@walshpsych.net</a></div>
     <div class="contact-detail-label">Phone</div>
     <div class="contact-detail-val">720-515-5681</div>
-    <a href="/cdn-cgi/l/email-protection#d2b6a0beb3a7a0b3bea5b3bea1ba92b5bfb3bbbefcb1bdbfeda1a7b0b8b7b1a6ef9cb7a5f7e0e286bab7a0b3a2abf7e0e29bbca3a7bba0ab" class="btn-terra">Send a Message</a>
+    <a href="mailto:laura@walshpsych.net" class="btn-terra">Send a Message</a>
     <a href="https://linebargerandassociates.clientsecure.me" target="_blank" class="btn-outline-light">Client Portal →</a>
   </div>
 </section>
