--- a/therapy.html
+++ b/therapy.html
@@ -158,7 +158,7 @@
     <p class="page-subtitle">Practical, active, and authentic — helping adults build genuine insight and become the changemakers in their own lives.</p>
   </div>
   <div class="hero-photo">
-    <img src="laura_photo2.png" alt="Dr. Laura L. Walsh">
+    <img src="laura_square_headshot.jpg" alt="Dr. Laura L. Walsh">
   </div>
 </section>
 
@@ -317,10 +317,10 @@
   </div>
   <div class="cta-right">
     <div class="contact-detail-label">Email</div>
-    <div class="contact-detail-val"><a href="mailto:laura@walshpsych.net" style="color:var(--terra);text-decoration:none;">laura@walshpsych.net</a></div>
+    <div class="contact-detail-val"><a href="/cdn-cgi/l/email-protection#44282531362504332528372c34373d272c6a2a2130" style="color:var(--terra);text-decoration:none;"><span class="__cf_email__" data-cfemail="2b474a5e594a6b5c4a4758435b5852484305454e5f">[email&#160;protected]</span></a></div>
     <div class="contact-detail-label">Phone</div>
     <div class="contact-detail-val">720-515-5681</div>
-    <a href="mailto:laura@walshpsych.net" class="btn-terra">Send a Message</a>
+    <a href="/cdn-cgi/l/email-protection#b3dfd2c6c1d2f3c4d2dfc0dbc3c0cad0db9dddd6c7" class="btn-terra">Send a Message</a>
     <a href="https://linebargerandassociates.clientsecure.me" target="_blank" class="btn-outline-light">Client Portal →</a>
   </div>
 </section>
@@ -335,11 +335,4 @@
     <li><a href="forensic.html">Forensic</a></li>
     <li><a href="ai.html">AI Consulting</a></li>
     <li><a href="therapy.html">Therapy</a></li>
-        <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-  <p class="footer-copy">© 2025 Dr. Laura L. Walsh · Walsh Psychology · Trinidad, CO</p>
-</footer>
-
-</body>
-</html>
+        <li><a href="about.html">About</a><
